@@ -1,0 +1,32 @@
+{
+	"genericName": "City Phase",
+	"specificName": {
+		"han": "Jùn",
+		"mace": "Megalopolis",
+		"ptol": "Megalopolis",
+		"sele": "Megalopolis",
+		"spart": "Megalopolis"
+	},
+	"description": "Advances from a bustling town to a veritable metropolis, full of the wonders of modern technology.",
+	"cost": {
+		"stone": 0,
+		"metal": 0
+	},
+	"requirements": {
+		"entity": {
+			"class": "Town",
+			"number": 3
+		}
+	},
+	"requirementsTooltip": "Requires three Town Structures.",
+	"supersedes": "phase_town_generic",
+	"replaces": ["phase_city"],
+	"icon": "city_phase.png",
+	"researchTime": 1,
+	"tooltip": "Advance to City Phase, which unlocks more entities and technologies. Civic Centers +50% territory influence radius. Structures +9 capture points regeneration rate per garrisoned unit.",
+	"modifications": [
+		{ "value": "Capturable/GarrisonRegenRate", "add": 9, "affects": "Structure" },
+		{ "value": "TerritoryInfluence/Radius", "multiply": 1.5, "affects": "CivCentre" }
+	],
+	"soundComplete": "interface/alarm/alarm_phase.xml"
+}
