@@ -1,0 +1,32 @@
+{
+	"genericName": "Town Phase",
+	"specificName": {
+		"han": "Xìan",
+		"mace": "Kōmopolis",
+		"ptol": "Kōmopolis",
+		"sele": "Kōmopolis",
+		"spart": "Kōmopolis"
+	},
+	"description": "Advances from a small village to a bustling town, ready to expand rapidly.",
+	"cost": {
+		"food": 0,
+		"wood": 0
+	},
+	"requirements": {
+		"entity": {
+			"class": "Village",
+			"number": 5
+		}
+	},
+	"requirementsTooltip": "Requires five Village Structures.",
+	"supersedes": "phase_village",
+	"replaces": ["phase_town"],
+	"icon": "town_phase.png",
+	"researchTime": 1,
+	"tooltip": "Advance to Town Phase, which unlocks more entities and technologies. Civic Centers +30% territory influence radius. Structures +7 capture points regeneration rate per garrisoned unit.",
+	"modifications": [
+		{ "value": "Capturable/GarrisonRegenRate", "add": 7, "affects": "Structure" },
+		{ "value": "TerritoryInfluence/Radius", "multiply": 1.3, "affects": "CivCentre" }
+	],
+	"soundComplete": "interface/alarm/alarm_phase.xml"
+}
